--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "magic-bytes.js": "^1.12.1",
     "multer": "^2.0.2",
     "prismjs": "^1.30.0",
+    "quill": "^2.0.3",
+    "quill-delta-to-html": "^0.12.1",
     "react-colorful": "^5.6.1",
+    "react-quill": "^2.0.0",
     "sanitize-filename": "^1.6.3",
     "sharp": "^0.34.3",
     "uploadcare-widget": "^3.23.3",
