Fix: Corrigir validação de conteúdo para publicações com vídeo - Atualizar método de delta no TopicCreate.tsx para usar quill.getContents() - Remover RichTextEditor.tsx obsoleto - Adicionar componentes VideoContentRenderer e VideoThumbnail - Melhorar validação de conteúdo no CreateTopicModal.tsx - Permitir publicações apenas com vídeo, imagem ou texto

--- a/package.json
+++ b/package.json
@@ -113,5 +113,8 @@
     "vaul": "^0.9.3",
     "vite": "^6.2.2",
     "vitest": "^3.1.4"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-win32-x64-msvc": "^4.50.0"
   }
 }
